# pdf-gen

./: .gitignore  Caddyfile  Dockerfile  Dockerfile.local  README.md  data.txt  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.dev.txt  requirements.txt  test.py  zygoat_settings.yml
api/: .eslintrc.js  Dockerfile.local  package.json
api/src/: index.js
backend/: settings.py  urls.py
chrome/: Dockerfile.local
pdfgen/: apps.py  models.py  tests.py  urls.py  views.py
pdfgen/migrations/: 0001_initial.py
