[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry]
name = "pdf-gen"
version = "0.1.0"
description = ""
authors = [ "Metlife Legal Plans <mrawls@legalplans.com>",]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.31"
Django = "^4.2.11"
psycopg2 = "^2.9.9"
django-cors-headers = "^3.14.0"
django-storages = "^1.14.2"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
djangorestframework-camel-case = "^1.4.2"
django-anymail = "^8.6"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
weasyprint = "56"
zygoat-django = "^1.0.1"
beautifulsoup4 = "^4.12.3"
django-cprofile-middleware = "^1.0.5"
fonttools = {version = "4.18.0", extras = ["woff"]}
psycopg2-binary = "^2.9.9"
psycogreen = "^1.0.2"

[tool.poetry.dev-dependencies]
pytz = "^2022.7.1"
factory-boy = "^3.3.0"
flake8-black = "^0.3.3"
bandit = "^1.7.7"
flake8 = "^4.0.1"
flake8-mock = "^0.3"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-debugger = "^4.1.2"
flake8-builtins = "^1.5.3"
flake8-deprecated = "^1.3"
flake8-comprehensions = "^3.14.0"
pytest = "^7.4.4"
pytest-django = "^4.8.0"
pytest-cov = "^3.0.0"
